[gd_scene load_steps=4 format=3 uid="uid://biivyjrq05bun"]

[ext_resource type="Script" uid="uid://bt78mkvcvnly8" path="res://src/pause_menu.gd" id="1_kukqi"]
[ext_resource type="StyleBox" uid="uid://cnrtf6vbo512a" path="res://resources/menu_style.tres" id="1_n87rw"]
[ext_resource type="StyleBox" uid="uid://q323yqe6difc" path="res://resources/menu_button_normal.tres" id="2_myx47"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kukqi")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.15
anchor_bottom = 1.0
offset_left = -22.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_n87rw")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.823529, 1)
theme_override_font_sizes/font_size = 48
text = "Game Paused"
horizontal_alignment = 1

[node name="ResumeBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_colors/font_focus_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_myx47")
text = "Resume"

[node name="RestartBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_colors/font_focus_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_myx47")
text = "Restart Game"

[node name="MainMenuBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_colors/font_focus_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_myx47")
text = "Exit to Main Menu"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
